--- a/package.json
+++ b/package.json
@@ -31,10 +31,20 @@
     ]
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.2",
     "coveralls": "^3.0.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.0.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^5.0.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
     "jest-cli": "^24.8.0",
+    "prettier": "^1.18.2",
     "react-test-renderer": "^16.8.6"
   },
   "jest": {
