--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,10 @@
     "react/prop-types": 0,
     "no-underscore-dangle": 0,
     "import/imports-first": ["error", "absolute-first"],
-    "import/newline-after-import": "error"
+    "import/newline-after-import": "error",
+    "no-return-assign": 0,
+    "react/require-default-props": [0],
+    "react/forbid-prop-types": [0]
   },
   "globals": {
     "window": true,
